WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282965
weather.com: [macOS] Unable to dismiss drop-down after clicking on document body
https://bugs.webkit.org/show_bug.cgi?id=282965
Summary
weather.com: [macOS] Unable to dismiss drop-down after clicking on document body
Wenson Hsieh
Reported
2024-11-11 18:08:25 PST
rdar://138053733
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-11-11 18:15:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36516
EWS
Comment 2
2024-11-11 20:07:29 PST
Committed
286468@main
(0829e2fa6ac3): <
https://commits.webkit.org/286468@main
> Reviewed commits have been landed. Closing PR #36516 and removing active labels.
Karl Dubost
Comment 3
2024-11-17 20:39:05 PST
See
Bug 283276
for instructions to test and eventually remove the Quirk
EWS
Comment 4
2024-12-04 00:41:45 PST
Committed
283286.560@safari-7620-branch
(5ea101f9262f): <
https://commits.webkit.org/283286.560@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2368 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug