weather.com: [macOS] Unable to dismiss drop-down after clicking on document body https://bugs.webkit.org/show_bug.cgi?id=282965 rdar://138053733

Reviewed by Abrar Rahman Protyasha and Richard Robinson.

Augment an existing quirk to allow mouse clicks to `focus()` form controls (in this case, a `button`
element). weather.com depends on the button that shows the dropdown menu gaining focus when clicked,
since it dismisses the dropdown when the button loses focus (which, in turn, happens when the user
clicks on the body).

This is a long-standing behavior in WebKit, which (roughly) matches platform convention on macOS;
see https://webkit.org/b/22261 for more context.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsFormControlToBeMouseFocusable const):

Canonical link: https://commits.webkit.org/286468@main